--- a/index.html
+++ b/index.html
@@ -67,11 +67,19 @@
             <td class="gitlab-ce mirror-size">N/A</td>
             <td><a href="/.help/gitlab-ce.html">gitlab-ce 使用帮助</a></td>
         </tr>
+        <tr class="odd">
+            <td><a href="/rubygems/">rubygems/</a></td>
+            <td class="rubygems update-time">N/A</td>
+            <td class="rubygems upstream">N/A</td>
+            <td class="rubygems sync-status">N/A</td>
+            <td class="rubygems mirror-size">N/A</td>
+            <td><a href="/.help/rubygems.html">rubygems 使用帮助</a></td>
+        </tr>
     </tbody>
 </table>
 <div id="footer">
-    <a target="_blank" href="http://weyo.me/">Let There Be Light</a>
-    <a target="_blank" href="https://github.com/weyo/">Github/WEYO</a>
+    <a target="_blank" href="https://github.com/weyo/">Github/weyo</a>
+    <a target="_blank" href="https://github.com/whsir/tunasync-web">Github/whsir</a>
 </div>
 
 </body>
