--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
             <td class="wlnmp mirror-size">N/A</td>
             <td><a href="/.help/wlnmp.html">wlnmp 使用帮助</a></td>
         </tr>
+        <tr class="odd">
+            <td><a href="/pypi/">pypi/</a></td>
+            <td class="pypi update-time">N/A</td>
+            <td class="pypi upstream">N/A</td>
+            <td class="pypi sync-status">N/A</td>
+            <td class="pypi mirror-size">N/A</td>
+            <td><a href="/.help/pypi.html">pypi 使用帮助</a></td>
+        </tr>
     </tbody>
 </table>
 <div id="footer">
